--- a/index.html
+++ b/index.html
@@ -6,10 +6,10 @@
     <title>Lets Conflict!</title>
   </head>
   <body>
-<h1>Herzlich Willkommen</h1>
-<p>Unser Unternehmen steht für professionelle und vielseitige Dienstleistungen, die stets auf die Bedürfnisse unserer Kunden abgestimmt sind. Mit einem Fokus auf Effizienz und Termintreue setzen wir alles daran, höchste Zufriedenheit zu gewährleisten.</p>
+<h1>Willkommen bei der Dienstleistungs</h1>
+<p>Unser Unternehmen bietet zuverlässige Dienstleistungen in verschiedenen Bereichen an. Wir arbeiten daran, Kundenanforderungen effizient und termingerecht zu erfüllen.</p>
 
-<p>Wir leisten unseren Dienst!</p>
+<p></p>
 
   </body>
 </html>
